downloader updated + producer aligned

--- a/notebooks/Producer.ipynb
+++ b/notebooks/Producer.ipynb
@@ -55,7 +55,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_json(\n",
-    "        './data/Amazon_Instant_Video_5.json',\n",
+    "        './data/All_Beauty.json',\n",
     "        lines=True\n",
     "    )\n",
     "\n",
@@ -102,7 +102,7 @@
    ],
    "source": [
     "# TODO: for test purpose, remove after \n",
-    "producer_do('B000H00VBQ')\n",
+    "producer_do('0143026860')\n",
     "# producer_do(asin)"
    ]
   }
