--- a/notebooks/data_download.ipynb
+++ b/notebooks/data_download.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wget"
+    "import wget\n",
+    "import gzip\n",
+    "import shutil"
    ]
   },
   {
@@ -23,7 +25,7 @@
    "metadata": {},
    "source": [
     "#### Amazon Instant Video Reviews ####\n",
-    "Download Amazon Instant Video from [Amazon product data](https://jmcauley.ucsd.edu/data/amazon/)\n"
+    "Download Amazon All Beauty JSON from [Amazon product data](http://deepyeti.ucsd.edu/jianmo/amazon/index.html)\n"
    ]
   },
   {
@@ -32,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mkdir -p /opt/workspace/datain/amazon-reviews"
+    "mkdir -p /opt/workspace/notebooks/data"
    ]
   },
   {
@@ -41,30 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_path = '/opt/workspace/datain/amazon-reviews'\n",
+    "wget.download('http://deepyeti.ucsd.edu/jianmo/amazon/categoryFiles/All_Beauty.json.gz')\n",
     "\n",
-    "wget.download('http://snap.stanford.edu/data/amazon/productGraph/categoryFiles/reviews_Amazon_Instant_Video_5.json.gz'\n",
-    "                   , out=target_path)        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gzip\n",
-    "import pandas as pd\n",
-    "\n",
-    "pd.set_option('display.max_columns', 500)\n",
-    "\n",
-    "df = pd.read_json(\n",
-    "        '/opt/workspace/datain/amazon-reviews/reviews_Amazon_Instant_Video_5.json.gz',\n",
-    "        lines=True,\n",
-    "        compression='gzip'\n",
-    "    )\n",
-    "\n",
-    "df.head(5)"
+    "with gzip.open('All_Beauty.json.gz', 'rb') as f_in:\n",
+    "    with open('./data/All_Beauty.json', 'wb') as f_out:\n",
+    "        shutil.copyfileobj(f_in, f_out)      "
    ]
   }
  ],
