--- a/notebooks/Consumer.ipynb
+++ b/notebooks/Consumer.ipynb
@@ -104,6 +104,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1b652709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def toCategory(sentiment):\n",
+    "  negList = ['fear', 'sadness']\n",
+    "  if sentiment in negList:\n",
+    "    return 'Negative'\n",
+    "  else:\n",
+    "    return 'Positive'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "672e6dc3",
    "metadata": {},
@@ -118,7 +133,6 @@
     "        start_time = time()\n",
     "        seconds = 2\n",
     "\n",
-    "        index = 1\n",
     "        batch = []\n",
     "        \n",
     "        while running:         \n",
@@ -134,23 +148,17 @@
     "\n",
     "                    df = spark.createDataFrame(pd.DataFrame({\"text\":batch}))\n",
     "                    result = pipelineModel.transform(df) \n",
-    "                    result.select(F.explode(F.arrays_zip('document.result', 'sentiment.result')).alias(\"cols\")).select(F.expr(\"cols['0']\").alias(\"document\"),F.expr(\"cols['1']\").alias(\"sentiment\")).show(truncate=False)\n",
-    "                    print('----------------')\n",
-    "\n",
-    "                    file_name = 'AMAZON_FASHION_' + str(index) + '.txt'\n",
-    "                    print(\"File {} has been created. File size: {} lines\".format(file_name, len(batch)))\n",
-    "\n",
-    "                    # Create the folder if it does not exists\n",
-    "                    path = 'AMAZON_FASHION'                    \n",
-    "                    os.makedirs(path, exist_ok=True) \n",
     "                    \n",
-    "                    complete_name = os.path.join('AMAZON_FASHION', file_name)\n",
-    "                    with open(complete_name, 'w') as f:\n",
-    "                        for item in batch:\n",
-    "                            f.write(\"%s\\n\" % item)\n",
+    "                    sentimentDF = result.select(F.explode('sentiment.result')).toPandas()\n",
+    "\n",
+    "                    sentimentDF['PosNeg'] = sentimentDF['col'].apply(toCategory)\n",
+    "\n",
+    "                    sentimentDF.groupby('PosNeg')[\"PosNeg\"].count().plot(kind=\"pie\")\n",
+    "\n",
+    "                    sentimentDF.groupby('PosNeg')[\"PosNeg\"].count().plot(kind=\"bar\")\n",
+    "\n",
     "                    \n",
     "                    batch = []\n",
-    "                    index +=1\n",
     "                \n",
     "                start_time = time()  \n",
     "                \n",
@@ -179,24 +187,7 @@
    "execution_count": null,
    "id": "02831eea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File AMAZON_FASHION_1.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_2.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_3.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_4.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_5.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_6.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_7.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_8.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_9.txt has been created. File size: 100 lines\n",
-      "File AMAZON_FASHION_10.txt has been created. File size: 100 lines\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "basic_consume_loop(consumer, [conf.KAFKA_TOKEN])"
    ]
