--- a/notebooks/Producer.ipynb
+++ b/notebooks/Producer.ipynb
@@ -53,9 +53,11 @@
    "source": [
     "import gzip\n",
     "import pandas as pd\n",
+    "import json\n",
+    "import os\n",
     "\n",
     "df = pd.read_json(\n",
-    "        './data/All_Beauty.json',\n",
+    "        './data/Movies_and_TV.json',\n",
     "        lines=True\n",
     "    )\n",
     "\n",
@@ -79,30 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b3560807",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch [ 0 - 100 ] sent\n",
-      "Batch [ 100 - 200 ] sent\n",
-      "Batch [ 200 - 300 ] sent\n",
-      "Batch [ 300 - 400 ] sent\n",
-      "Batch [ 400 - 500 ] sent\n",
-      "Batch [ 500 - 600 ] sent\n",
-      "Batch [ 600 - 700 ] sent\n",
-      "Batch [ 700 - 800 ] sent\n",
-      "Batch [ 800 - 900 ] sent\n",
-      "Batch [ 900 - 1000 ] sent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: for test purpose, remove after \n",
-    "producer_do('0143026860')\n",
+    "producer_do('0001527665')\n",
     "# producer_do(asin)"
    ]
   }
