--- a/notebooks/data_download.ipynb
+++ b/notebooks/data_download.ipynb
@@ -17,14 +17,18 @@
    "source": [
     "import wget\n",
     "import gzip\n",
-    "import shutil"
+    "import shutil\n",
+    "import os.path\n",
+    "from os import path\n",
+    "import json\n",
+    "import os"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Amazon Instant Video Reviews ####\n",
+    "#### Amazon All Beauty Reviews ####\n",
     "Download Amazon All Beauty JSON from [Amazon product data](http://deepyeti.ucsd.edu/jianmo/amazon/index.html)\n"
    ]
   },
@@ -34,7 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mkdir -p /opt/workspace/notebooks/data"
+    "if not path.exists('/opt/workspace/notebooks/data'):\n",
+    "    mkdir -p /opt/workspace/notebooks/data"
    ]
   },
   {
@@ -43,11 +48,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wget.download('http://deepyeti.ucsd.edu/jianmo/amazon/categoryFiles/All_Beauty.json.gz')\n",
+    "file_name = 'Movies_and_TV.json'\n",
+    "if not path.exists('/opt/workspace/notebooks/data/{}'.format(file_name)):\n",
+    "    wget.download('http://deepyeti.ucsd.edu/jianmo/amazon/categoryFiles/{}.gz'.format(file_name))\n",
+    "    with gzip.open('{}.gz'.format(file_name), 'rb') as f_in:\n",
+    "        with open('./data/{}'.format(file_name), 'wb') as f_out:\n",
+    "            shutil.copyfileobj(f_in, f_out)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/opt/workspace/notebooks/data/Movies_and_TV.json', 'r', encoding='utf-8') as f1:\n",
+    "    ll = [json.loads(line.strip()) for line in f1.readlines()]\n",
     "\n",
-    "with gzip.open('All_Beauty.json.gz', 'rb') as f_in:\n",
-    "    with open('./data/All_Beauty.json', 'wb') as f_out:\n",
-    "        shutil.copyfileobj(f_in, f_out)      "
+    "    print(len(ll))\n",
+    "\n",
+    "    size_of_the_split=20000\n",
+    "    total = len(ll) // size_of_the_split\n",
+    "\n",
+    "    print(total+1)\n",
+    "    if not path.exists('/opt/workspace/notebooks/data/data_split'):\n",
+    "        mkdir -p /opt/workspace/notebooks/data\n",
+    "    for i in range(total+1):\n",
+    "        json.dump(ll[i * size_of_the_split:(i + 1) * size_of_the_split], open(\n",
+    "            \"/opt/workspace/notebooks/data/data_split\" + str(i+1) + \".json\", 'w',\n",
+    "            encoding='utf8'), ensure_ascii=False, indent=True)"
    ]
   }
  ],
